--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "babel-plugin-lodash": "^3.3.4",
     "babel-preset-stage-1": "^6.1.18",
+    "bootstrap": "^4.2.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router-dom": "^4.0.0",
